--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image slider</title>
+    <title>Dropdown menu</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- font awesome -->
@@ -16,7 +16,207 @@
 
   <body>
 
+    <header id="navbar">
 
+      <div class="container">
+        <!-- parte fissa sx -->
+        <nav id="navbar-left">
+          <!-- logo -->
+          <div class="img-container">
+            <img src="./img/logo.png" alt="">
+          </div>
+          <!-- link personal -->
+          <div class="">
+            <a href="#">
+              Personal
+            </a>
+          </div>
+          <!-- link business -->
+          <div class="">
+            <a href="#">
+              Business
+            </a>
+          </div>
+
+        </nav>
+        <!-- parte fissa dx -->
+        <nav id="navbar-right">
+          <ul>
+            <!-- FEATURES -->
+            <li>
+              <!-- dropdown features -->
+              <div class="dropdown-start">
+                Features
+              </div>
+              <!-- menu dropdown -->
+              <div class="dropdown-menu">
+                <!-- colonna 1 -->
+                <div class="">
+                  <h3>ACCOUNT</h3>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        Budget
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Cards
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Junior Account
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Pockets
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </li>
+            <!-- PLANS -->
+            <li>
+              <!-- dropdown Plans -->
+              <div class="dropdown-start">
+                Plans
+              </div>
+              <!-- menu dropdown -->
+              <div class="dropdown-menu">
+                <!-- colonna 1 -->
+                <div class="">
+                  <h3>ACCOUNT</h3>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        Budget
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Cards
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Junior Account
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Pockets
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </li>
+            <!-- ABOUT US -->
+            <li>
+              <!-- dropdown ABOUT US -->
+              <div class="dropdown-start">
+                About us
+              </div>
+              <!-- menu dropdown -->
+              <div class="dropdown-menu">
+                <!-- colonna 1 -->
+                <div class="">
+                  <h3>ACCOUNT</h3>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        Budget
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Cards
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Junior Account
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Pockets
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </li>
+            <!-- HELP -->
+            <li>
+              <!-- dropdown Help -->
+              <div class="dropdown-start">
+                Help
+              </div>
+              <!-- menu dropdown grosso -->
+              <div class="dropdown-menu hide">
+                <!-- colonna 1 -->
+                <div class="">
+                  <h3>ACCOUNT</h3>
+                  <ul>
+                    <li>
+                      <a href="#">
+                        Budget
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Cards
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Junior Account
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        Pockets
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
+            </li>
+            <!-- SIGN IN -->
+            <li>
+              <!-- bottone sign in -->
+              <button type="button" name="button">
+                Sign in
+              </button>
+            </li>
+            <!-- GET THE APP -->
+            <li>
+              <!-- bottone get the app -->
+              <button type="button" name="button">
+                Get the app
+              </button>
+            </li>
+
+          </ul>
+
+
+
+        </nav>
+      </div>
+
+    </header>
 
   </body>
 
