--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <!-- FEATURES -->
             <li>
               <!-- dropdown features -->
-              <div class="dropdown-start">
-                Features
+              <div class="dropdown-start uno">
+                <span>Features</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
                   <!-- colonna 1 -->
@@ -84,8 +84,8 @@
             <!-- PLANS -->
             <li>
               <!-- dropdown Plans -->
-              <div class="dropdown-start">
-                Plans
+              <div class="dropdown-start due">
+                <span>Plans</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
                   <!-- colonna 1 -->
@@ -123,8 +123,8 @@
             <!-- ABOUT US -->
             <li>
               <!-- dropdown ABOUT US -->
-              <div class="dropdown-start">
-                About us
+              <div class="dropdown-start tre">
+                <span>About us</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
                   <!-- colonna 1 -->
@@ -162,8 +162,8 @@
             <!-- HELP -->
             <li>
               <!-- dropdown Help -->
-              <div class="dropdown-start">
-                Help
+              <div class="dropdown-start quattro">
+                <span>Help</span>
                 <!-- menu dropdown grosso -->
                 <div class="dropdown-menu hide ">
                   <!-- colonna 1 -->
@@ -196,7 +196,7 @@
                 </div>
 
               </div>
-              
+
             </li>
             <!-- SIGN IN -->
             <li>
