--- a/index.html
+++ b/index.html
@@ -45,36 +45,118 @@
             <!-- FEATURES -->
             <li>
               <!-- dropdown features -->
-              <div class="dropdown-start uno">
+              <div class="dropdown-start start">
                 <span>Features</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
-                  <!-- colonna 1 -->
-                  <div class="">
-                    <h3>ACCOUNT</h3>
-                    <ul>
-                      <li>
-                        <a href="#">
-                          Budget
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          Cards
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          Junior Account
-                        </a>
-                      </li>
-                      <li>
-                        <a href="#">
-                          Pockets
-                        </a>
-                      </li>
-                    </ul>
+                  <div class="flex-container">
+                    <!-- colonna 1 -->
+                    <div class="">
+                      <h3>ACCOUNT</h3>
+                      <ul>
+                        <li>
+                          <a href="#">
+                            Budget
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Cards
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Junior Account
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Pockets
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- colonna 2 -->
+                    <div class="">
+                      <h3>ACCOUNT</h3>
+                      <ul>
+                        <li>
+                          <a href="#">
+                            Budget
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Cards
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Junior Account
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Pockets
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- colonna 3 -->
+                    <div class="">
+                      <h3>ACCOUNT</h3>
+                      <ul>
+                        <li>
+                          <a href="#">
+                            Budget
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Cards
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Junior Account
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Pockets
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                    <!-- colonna 4 -->
+                    <div class="">
+                      <h3>ACCOUNT</h3>
+                      <ul>
+                        <li>
+                          <a href="#">
+                            Budget
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Cards
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Junior Account
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#">
+                            Pockets
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+
                   </div>
+
 
                 </div>
 
@@ -84,7 +166,7 @@
             <!-- PLANS -->
             <li>
               <!-- dropdown Plans -->
-              <div class="dropdown-start due">
+              <div class="dropdown-start">
                 <span>Plans</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
@@ -123,7 +205,7 @@
             <!-- ABOUT US -->
             <li>
               <!-- dropdown ABOUT US -->
-              <div class="dropdown-start tre">
+              <div class="dropdown-start">
                 <span>About us</span>
                 <!-- menu dropdown -->
                 <div class="dropdown-menu hide">
@@ -162,7 +244,7 @@
             <!-- HELP -->
             <li>
               <!-- dropdown Help -->
-              <div class="dropdown-start quattro">
+              <div class="dropdown-start">
                 <span>Help</span>
                 <!-- menu dropdown grosso -->
                 <div class="dropdown-menu hide ">
